--- a/app/4clabs-server/configs/config.local.yaml
+++ b/app/4clabs-server/configs/config.local.yaml
@@ -15,7 +15,7 @@ third_party:
 data:
   database:
     driver: mysql
-    source: dev:Zhengli_0220@tcp(master-pub.mysql.polardb.rds.aliyuncs.com:3306)/4clabs?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+    source: dev:Zhengli_0220@tcp(rm-2ze69093m45mv5730ao.mysql.rds.aliyuncs.com:3306)/forclabs?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
   redis:
     addr: r-2zeq0pz2iv0m5ygqlfpd.redis.rds.aliyuncs.com:6379
     password: Zhengli_0220
