feature: 二创作品nft 交易

--- a/app/4clabs-server/configs/config.production.yaml
+++ b/app/4clabs-server/configs/config.production.yaml
@@ -12,6 +12,10 @@ server:
 third_party:
   nftgo:
     api_key: a12366dfa8e44fc99d7667765cf3608e
+  contract:
+    address: 0x78cebaf8498a34451e50dcda7f0ee568db89ae39
+    rawurl: wss://rinkeby.infura.io/ws/v3/011c5e6aa1fc44daab9ab5e51baeb9fb
+
 data:
   database:
     driver: mysql
