--- a/app/4clabs-server/configs/config.local.yaml
+++ b/app/4clabs-server/configs/config.local.yaml
@@ -1,17 +1,20 @@
 server:
   http:
     addr: 0.0.0.0:8000
-    timeout: 1s
+    timeout: 20s
     jwt:
       key: basictid
       timeout: 1209600s
       min_refresh: 604800s
   grpc:
     addr: 0.0.0.0:9000
-    timeout: 1s
+    timeout: 20s
 third_party:
   nftgo:
     api_key: a12366dfa8e44fc99d7667765cf3608e
+  contract:
+    address: 0xE71b4b58D34364552C455847E1AFCAE88b29eF9F
+    rawurl: wss://rinkeby.infura.io/ws/v3/011c5e6aa1fc44daab9ab5e51baeb9fb
 data:
   database:
     driver: mysql
