--- a/app/contractlistener/configs/config.production.yaml
+++ b/app/contractlistener/configs/config.production.yaml
@@ -15,7 +15,8 @@ third_party:
   contract:
     address: 0x2659f6208b53C691c8969c5F06A776f37be65e5a
     rawurl: wss://mainnet.infura.io/ws/v3/011c5e6aa1fc44daab9ab5e51baeb9fb
-
+    from_block: 15070364
+  script_url: http://47.243.124.75
 data:
   database:
     driver: mysql
